objects/simpli_lv__List_View_User_Config__c.object
<CustomObject>
    <description>Holds list configuration for a user for a given list view named component.</description>
    <fields>
        <fullName>simpli_lv__Ltn_Component_Name__c</fullName>
        <description>The Simpli List View lightning component name that this configuration is associated with.</description>
        <inlineHelpText>The Simpli List View lightning component name that this configuration is associated with.</inlineHelpText>
        <label>Ltn Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Name__c</fullName>
        <description>Name which identifies what this config value is for.</description>
        <inlineHelpText>Name which identifies what this config value is for.</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Primary key for the list view user config object. Current format is as follows - User.Id + &apos;:&apos; + List_View_Component_Name + Parameter_Name. This value will be set internally.</description>
        <externalId>true</externalId>
        <inlineHelpText>Primary key for the list view user config object. Current format is as follows - User.Id + &apos;:&apos; + List_View_Component_Name + Parameter_Name. This value will be set internally.</inlineHelpText>
        <label>Primary Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>simpli_lv__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user for which this list config is configured for.</description>
        <inlineHelpText>The user for which this list config is configured for.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>List_View_User_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Value__c</fullName>
        <description>The value of this config record.</description>
        <inlineHelpText>The value of this config record.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>List View User Config</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Ltn_Component_Name__c</columns>
        <columns>simpli_lv__Name__c</columns>
        <columns>simpli_lv__Value__c</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>simpli_lv__User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Modified_Today</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Ltn_Component_Name__c</columns>
        <columns>simpli_lv__Name__c</columns>
        <columns>simpli_lv__Value__c</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>simpli_lv__User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All - Modified Today</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Non_Sort_Order</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Ltn_Component_Name__c</columns>
        <columns>simpli_lv__Name__c</columns>
        <columns>simpli_lv__User__c</columns>
        <columns>simpli_lv__Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Name__c</field>
            <operation>notContain</operation>
            <value>sortOrder</value>
        </filters>
        <label>All Non-Sort Order</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Sort_Order</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Ltn_Component_Name__c</columns>
        <columns>simpli_lv__Name__c</columns>
        <columns>simpli_lv__User__c</columns>
        <columns>simpli_lv__Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Name__c</field>
            <operation>contains</operation>
            <value>sortOrder</value>
        </filters>
        <label>All Sort Order</label>
    </listViews>
    <nameField>
        <displayFormat>LVUC-{0}</displayFormat>
        <label>List View User Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View User Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>